<?xml version="1.0" encoding="utf-8" ?>

   <menu xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:android="http://schemas.android.com/apk/res/android">
       <menu />



       <item android:id="@+id/nav_item_one"

             android:title="@string/security"/>
       <item
           android:id="@+id/nav_item_two"
           android:icon="@android:drawable/ic_lock_idle_lock"
           android:title="@string/device_schedule"
           android:visible="true" />
       <item
           android:id="@+id/nav_item_three"

           android:icon="@android:drawable/ic_menu_my_calendar"
           android:title="@string/day_schedule" />
    <item
        android:id="@+id/nav_item_four"

        android:icon="@android:drawable/sym_contact_card"
        android:title="@string/doors_windows" />
    <item
        android:id="@+id/nav_item_five"

        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/personal_data" />
    <item
        android:id="@+id/nav_item_six"

        android:icon="@android:drawable/ic_lock_idle_charging"
        android:title="@string/lights" />
    <item
        android:id="@+id/nav_item_seven"

        android:icon="@drawable/ic_audiotrack_dark"
        android:title="@string/mood_scenarios" />


</menu>






